[package]
name = "argontwo"
description = "argon2 hashing wasm module for deno"
repository = "https://github.com/denosaurs/argontwo"
license = "MIT"
version = "0.1.0"
authors = ["Elias SJögreen"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]
path = "wasm/lib.rs"

[dependencies]
wee_alloc = "0.4.5"
argon2 = "0.2.0"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
