[package]
name = "argontwo"
description = "argon2 hashing wasm module for deno"
repository = "https://github.com/denosaurs/argontwo"
license = "MIT"
version = "0.1.0"
authors = ["Elias Sjögreen"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
path = "wasm/lib.rs"

[dependencies]
argon2 = { version = "0.5.2", features = ["alloc"] }
talc = "3.1.1"

[profile.release]
opt-level = "s"
lto = true
